# ParityScope

./: .gitignore  CLAUDE.md  ParityScope_Business_Plan (9).docx  audit_report.json
engine/: .gitignore  README.md  demo.py  investigate_model.py  physionet_audit_report.json  pyproject.toml  test_nhanes.py  test_physionet_sepsis.py  update_business_plan.py
engine/src/parityscope/: __init__.py  cli.py  demo_data.py  licensing.py
engine/src/parityscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/src/parityscope/ai/: __init__.py  detection.py  llm.py  monitoring.py  recommendations.py
engine/src/parityscope/analysis/: __init__.py  feature_importance.py  intersectional.py
engine/src/parityscope/api/: __init__.py  helpers.py  models.py  schemas.py  server.py
engine/src/parityscope/audit/: __init__.py  engine.py  intersectional.py  result.py  subgroup_discovery.py
engine/src/parityscope/cli/: __init__.py  config.py  display.py  main.py
engine/src/parityscope/cli_app/: __init__.py
engine/src/parityscope/connectors/: __init__.py  base.py  sklearn_connector.py
engine/src/parityscope/data/: __init__.py  fhir.py  loaders.py  model_intake.py  profiling.py  validation.py
engine/src/parityscope/db/: __init__.py
engine/src/parityscope/metrics/: __init__.py  bootstrap.py  (+6 more)
engine/tests/: conftest.py  test_ai_detection.py  test_ai_llm.py  test_ai_monitoring.py  test_ai_recommendations.py  test_analysis.py  test_audit.py  test_bootstrap.py  test_cli_extended.py  test_connectors.py  test_db.py  test_demo_data.py  test_effect_size.py  test_intersectional.py  test_loaders.py  test_metrics.py  test_monitoring.py  test_power.py  test_profiling.py  test_recommendations.py  test_regulations.py  test_reports.py  test_reports_extended.py  test_rootcause.py  test_simulation.py  test_subgroup_discovery.py  test_threshold_free.py  test_validation.py
(+108 files in other folders)
